--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@react-three/drei": "9.14.3",
     "@react-three/fiber": "8.0.27",
+    "gsap": "^3.12.5",
     "leva": "^0.9.35",
     "r3f-perf": "^7.2.3",
     "react": "^18.0.0",
